--- a/MarketCapSP500.ipynb
+++ b/MarketCapSP500.ipynb
@@ -9,7 +9,7 @@
     "# Visualizing Stock Market Data Using S&P 500 and Quandl Financial Data\n",
     "# Market Cap Breakdown of S&P 500\n",
     "import quandl\n",
-    "quandl.ApiConfig.api_key = \"3YQ8M8hosvVVj7sKNZPU\"\n",
+    "#quandl.ApiConfig.api_key = \"<api key goes here>"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
