`Add original files, readme, SP500 csv

--- a/MarketCapSP500.ipynb
+++ b/MarketCapSP500.ipynb
@@ -7,10 +7,9 @@
    "outputs": [],
    "source": [
     "# Visualizing Stock Market Data Using S&P 500 and Quandl Financial Data\n",
-    "# https://towardsdatascience.com/visualizing-the-stock-market-with-tableau-c0a7288e7b4d\n",
     "# Market Cap Breakdown of S&P 500\n",
     "import quandl\n",
-    "quandl.ApiConfig.api_key = \"3YQ8M8hosvVVj7sKNZPU\"\n",
+    "#quandl.ApiConfig.api_key = \"<api key goes here>"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
