--- a/Stock_Market_Data_Analysis.ipynb
+++ b/Stock_Market_Data_Analysis.ipynb
@@ -105,9 +105,9 @@
    ],
    "source": [
     "# Parts 1-3: Using Stock Market Data\n",
-    "df = pd.read_csv('tsla.csv', parse_dates = True, index_col = 'Date')\n",
     "start = dt.datetime(2000,1,1)\n",
-    "end = dt.datetime(2020,5,22)\n",
+    "end = dt.datetime.now()\n",
+    "df = pd.read_csv('tsla.csv', parse_dates = True, index_col = 'Date')\n",
     "df = web.DataReader('TSLA', 'yahoo', start, end)\n",
     "\n",
     "print(df.tail(10))"
