--- a/Stock_Market_Data_Analysis.ipynb
+++ b/Stock_Market_Data_Analysis.ipynb
@@ -30,6 +30,9 @@
     }
    ],
    "source": [
+    "# Stock Market Data Analysis Using Python\n",
+    "# Import Packages (You maay need to install, using pip)\n",
+    "# For further info on installing packages with Python visit: https://packaging.python.org/tutorials/installing-packages/\n", 
     "import bs4 as bs\n",
     "import pickle\n",
     "import requests\n",
@@ -107,7 +110,7 @@
     "# Parts 1-3: Using Stock Market Data\n",
     "start = dt.datetime(2000,1,1)\n",
     "end = dt.datetime.now()\n",
-    "df = pd.read_csv('tsla.csv', parse_dates = True, index_col = 'Date')\n",
+    "# df = pd.read_csv('tsla.csv', parse_dates = True, index_col = 'Date')\n",
     "df = web.DataReader('TSLA', 'yahoo', start, end)\n",
     "\n",
     "print(df.tail(10))"
