--- a/Stock_Market_Data_Analysis.ipynb
+++ b/Stock_Market_Data_Analysis.ipynb
@@ -33,6 +33,14 @@
     "# Stock Market Data Analysis Using Python\n",
     "# Import Packages (You maay need to install, using pip)\n",
     "# For further info on installing packages with Python visit: https://packaging.python.org/tutorials/installing-packages/\n", 
+    "\n",
+    "# If you want to pip install inline uncomment the following:\n",
+    "#!pip install pandas\n",
+    "#!pip install pandas_datareader\n",
+    "#!pip install mpl_finance\n",
+    "#!pip install mplfinance\n",
+    "#!pip install --upgrade mplfinance\n",
+    "\n",
     "import bs4 as bs\n",
     "import pickle\n",
     "import requests\n",
